feat(providers): Added bitbucket enterprise provider
The new provider use rest API v1.0. For more info see https://docs.atlassian.com/bitbucket-server/rest/5.16.0/bitbucket-rest.html
This PR also contain fix in case when gitscm.List Report() response don't contain info about user permissions

--- a/web/abstruse/src/app/repos/repo-item/repo-item.component.html
+++ b/web/abstruse/src/app/repos/repo-item/repo-item.component.html
@@ -5,6 +5,7 @@
         <i class="fab fa-github is-medium is-gray" *ngSwitchCase="'github'"></i>
         <i class="fab fa-gitlab is-medium is-gray" *ngSwitchCase="'gitlab'"></i>
         <i class="fab fa-bitbucket is-medium is-gray" *ngSwitchCase="'bitbucket'"></i>
+        <i class="fab fa-bitbucket is-medium is-gray" *ngSwitchCase="'stash'"></i>
         <img src="/assets/images/icons/gitea-gray.svg" *ngSwitchCase="'gitea'" />
         <i class="fab fa-git is-medium is-gray" *ngSwitchDefault></i>
       </div>
