--- a/web/abstruse/src/app/providers/providers-modal/providers-modal.component.html
+++ b/web/abstruse/src/app/providers/providers-modal/providers-modal.component.html
@@ -63,7 +63,7 @@
         style="display: inline;box-sizing: border-box;width: calc(50% - 2px);"
       />
       <input
-        type="text"
+        type="password"
         name="httppass"
         class="input"
         placeholder="Http password for clone"
