feat(jobs): Show hostname of worker assigned to the job

--- a/web/abstruse/src/app/builds/job/job.component.html
+++ b/web/abstruse/src/app/builds/job/job.component.html
@@ -15,6 +15,7 @@
         <h2>Job #{{ job.id }}</h2>
       </div>
       <div class="subheader-right">
+        <h2>Worker: {{ job?.assignedWorker }}</h2>
         <button
           type="button"
           class="button"
