--- a/web/abstruse/src/styles/subheader.sass
+++ b/web/abstruse/src/styles/subheader.sass
@@ -90,6 +90,17 @@ $subheader-height: 70px
 
     .subheader-right
 
+      h2
+        color: $heading-light
+        text-transform: none
+        margin-right: 15px
+        padding-right: 15px
+        font-weight: $weight-medium
+        border-right: 1px solid $border-default
+        display: inline-flex
+        align-items: center
+        font-size: 13px
+
       .link
         +unselectable
         padding: 10px 0
